// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField Default 1`] = `
<div
  className="sc-kEYyzF cTffAb"
  onBlurCapture={[Function]}
  onClick={[Function]}
  onFocusCapture={[Function]}
>
  <div
    className="sc-eNQAEJ hyKmtb"
  >
    <span
      className="sc-hMqMXs cBvgnM"
    >
      Username
    </span>
  </div>
  <input
    className="sc-jKJlTe deKEDS"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <div
    className="sc-eNQAEJ hyKmtb"
  >
    <span
      className="sc-hMqMXs cBvgnM"
    >
      $
    </span>
  </div>
</div>
`;

exports[`Storyshots TextField With Currency formatting 1`] = `
Array [
  <div
    className="sc-kEYyzF cTffAb"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-eNQAEJ hyKmtb"
    >
      <span
        className="sc-hMqMXs cBvgnM"
      >
        $
      </span>
    </div>
    <input
      className="sc-jKJlTe deKEDS"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="10.00"
    />
  </div>,
  <div
    className="sc-bwzfXH eSFIdE"
  >
    <p
      className="sc-bxivhb WWdpn"
    >
      <span
        className="sc-htpNat eGtcyu"
      >
        <span
          className="sc-htpNat bCblnl"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat eGtcyu"
        >
          The reported value of this field is: 10
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  <div
    className="sc-kEYyzF jhLWRh"
    onBlurCapture={[Function]}
    onClick={[Function]}
    onFocusCapture={[Function]}
  >
    <div
      className="sc-eNQAEJ hyKmtb"
    >
      <span
        className="sc-hMqMXs cBvgnM"
      >
        Username
      </span>
    </div>
    <input
      className="sc-jKJlTe deKEDS"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <div
      className="sc-eNQAEJ hyKmtb"
    >
      <span
        className="sc-hMqMXs cBvgnM"
      >
        $
      </span>
    </div>
  </div>,
  <div
    className="sc-bwzfXH eSFIdE"
  >
    <p
      className="sc-bxivhb kRfUJT"
    >
      <span
        className="sc-htpNat eGtcyu"
      >
        <span
          className="sc-htpNat bCblnl"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat eGtcyu"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;
